tests/ui/closures/2229_closure_analysis/diagnostics/closure-origin-single-variant-diagnostics.stderr
error[E0382]: use of moved value: `c`
  --> $DIR/closure-origin-single-variant-diagnostics.rs:17:13
   |
LL |     let b = c;
   |             - value moved here
LL |     let a = c;
   |             ^ value used here after move
   |
note: closure cannot be moved more than once as it is not `Copy` due to moving the variable `point.0` out of its environment
  --> $DIR/closure-origin-single-variant-diagnostics.rs:12:50
   |
LL |         let SingleVariant::Point(ref mut x, _) = point;
   |                                                  ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
